# afterPot

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  REFACTORING_REPORT.md  SECURITY.md  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: stability-improvement-plan.md
scripts/: ensure-icons.cjs
src/: App.tsx  Settings.css  Settings.tsx  TranslatePopup.css  TranslatePopup.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/settings/: AutoStartSection.tsx  ErrorLogSection.tsx  HistorySection.tsx  HotkeySection.tsx  ThemeSection.tsx  index.ts
src/hooks/: index.ts  useTheme.ts  useWindowState.ts
src/types/: index.ts
src/utils/: storage.ts
