[package]
name = "afterpot"
version = "1.1.0"
description = "Windows11常駐翻訳アプリ"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-always-on-top", "window-set-position", "window-set-min-size", "window-set-size", "window-set-resizable", "window-set-max-size", "window-minimize", "window-show", "window-start-dragging", "global-shortcut-all", "clipboard-all", "shell-open", "window-unmaximize", "window-maximize", "window-close", "window-hide", "window-unminimize", "system-tray", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clipboard = "0.5"
selection = { git = "https://github.com/pot-app/Selection.git" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
